replaced all images

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
 
       <section class="welcome">
         <h1>Startrly</h1>
-        <p>A catchy tagline for a great solution</p>
+        <h3>A catchy tagline for a great solution</h3>
         <a class="button" href="#">Some Call to Action</a>
       </section>
 
 
       <section class="testimonial">
         <blockquote>
-          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.""
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
         </blockquote>
         <p>
           -Mx. Lorem
@@ -92,29 +92,29 @@
         <h2>Meet the team</h2>
         <ul>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for kari kiwi" /><br>
-            <span>Kari Kiwi</span><br>
-            <span>CFO</span>
+            <img src="images/team/philip-martin-596374-unsplash.jpeg" alt="profile for dee dugong" /><br>
+            <span>Dee Dugong</span><br>
+            <span>Startup Enthusiast</span>
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for dan dragon" /><br>
+            <img src="images/team/daniel-rigdon-597993-unsplash.jpeg" alt="profile for dan dragon" /><br>
             <span>Dan Dragon</span><br>
             <span>CMO</span>
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for chris caribou" /><br>
+            <img src="images/team/eunice-lituanas-242757-unsplash.jpeg" alt="profile for chris caribou" /><br>
             <span>Chris Caribou</span><br>
             <span>CIO</span>
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for charles cheetah" /><br>
+            <img src="images/team/kim-carpenter-307030-unsplash.jpeg" alt="profile for charles cheetah" /><br>
             <span>Charles Cheetah</span><br>
             <span>Board Member, CTO</span>
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for dee dugong" /><br>
-            <span>Dee Dugong</span><br>
-            <span>Startup Enthusiast</span>
+            <img src="images/team/cristian-newman-458458-unsplash.jpeg" alt="profile for kari kiwi" /><br>
+            <span>Kari Kiwi</span><br>
+            <span>CFO</span>
           </li>
         </ul>
       </section>
@@ -124,19 +124,19 @@
         <h2>Sponsors</h2>
         <ul>
           <li>
-            <img src="http://via.placeholder.com/300x100" />
+            <img src="images/logos/images.png" />
           </li>
           <li>
-            <img src="http://via.placeholder.com/250x125" />
+            <img src="images/logos/OrleansWinderLogo.jpg" />
           </li>
           <li>
-            <img src="http://via.placeholder.com/275x70" />
+            <img src="images/logos/logo-design-fuzzique.jpg" />
           </li>
           <li>
-            <img src="http://via.placeholder.com/250x120" />
+            <img src="images/logos/sfco.png" />
           </li>
           <li>
-            <img src="http://via.placeholder.com/220x100" />
+            <img src="images/logos/df292c7dd9b014ae9c8e0e8813f85fbd.jpg" />
           </li>
         </ul>
       </section>
