--- a/index.html
+++ b/index.html
@@ -150,39 +150,41 @@
     </section>
 
 
-    <section>
-      <div>
-        <h3>Support</h3>
-        <ul>
-          <li>
-            Demo
-          </li>
-          <li>
-            Support
-          </li>
-          <li>
-            Contact
-          </li>
-          <li>
-            Docs
-          </li>
-        </ul>
+    <footer>
+      <div id="footer-container">
+        <div>
+          <h3>Support</h3>
+          <ul>
+            <li>
+              Demo
+            </li>
+            <li>
+              Support
+            </li>
+            <li>
+              Contact
+            </li>
+            <li>
+              Docs
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h3>About</h3>
+          <ul>
+            <li>
+              Our Mission
+            </li>
+            <li>
+              Careers
+            </li>
+            <li>
+              Get in Touch
+            </li>
+          </ul>
+        </div>
       </div>
-      <div>
-        <h3>About</h3>
-        <ul>
-          <li>
-            Our Mission
-          </li>
-          <li>
-            Careers
-          </li>
-          <li>
-            Get in Touch
-          </li>
-        </ul>
-      </div>
-    </section>
+    </footer>
 
   </div>
 </body>
