--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h2>Why?</h2>
         <ul>
           <li>
-            <img src="http://via.placeholder.com/100x100" />
+            <img src="images/icons/towel.png" />
             <div>
               <strong>Comfortable</strong>
               <p>
@@ -57,7 +57,7 @@
             </div>
           </li>
           <li>
-            <img src="http://via.placeholder.com/100x100" />
+            <img src="images/icons/perfume.png" />
             <div>
             <strong>Robust</strong>
             <p>
@@ -66,7 +66,7 @@
             </div>
           </li>
           <li>
-            <img src="http://via.placeholder.com/100x100" />
+            <img src="images/icons/cute.png" />
             <div>
             <strong>Convenient</strong>
             <p>
