--- a/index.html
+++ b/index.html
@@ -90,55 +90,61 @@
 
       <section class="team-members">
         <h2>Meet the team</h2>
-        <ul>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-            <span>Kari Kiwi</span>
-            <span>CFO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
-            <span>Dan Dragon</span>
-            <span>CMO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-            <span>Chris Caribou</span>
-            <span>CIO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-            <span>Charles Cheetah</span>
-            <span>Board Member, CTO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
-            <span>Dee Dugong</span>
-            <span>Startup Enthusiast</span>
-          </li>
-        </ul>
+<!-- 
+        <section class="flexbox"> -->
+          <ul>
+            <li>
+              <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
+              <span>Kari Kiwi</span>
+              <span>CFO</span>
+            </li>
+            <li>
+              <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
+              <span>Dan Dragon</span>
+              <span>CMO</span>
+            </li>
+            <li>
+              <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
+              <span>Chris Caribou</span>
+              <span>CIO</span>
+            </li>
+            <li>
+              <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
+              <span>Charles Cheetah</span>
+              <span>Board Member, CTO</span>
+            </li>
+            <li>
+              <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
+              <span>Dee Dugong</span>
+              <span>Startup Enthusiast</span>
+            </li>
+          </ul>
+        <!-- </section> -->
       </section>
 
 
       <section class="sponsers">
         <h2>Sponsors</h2>
-        <ul>
-          <li>
-            <img src="http://via.placeholder.com/300x100" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/250x125" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/275x70" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/250x120" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/220x100" />
-          </li>
-        </ul>
+
+        <!-- <section class="flexbox"> -->
+          <ul class="flexbox">
+            <li>
+              <img src="http://via.placeholder.com/300x100" />
+            </li>
+            <li>
+              <img src="http://via.placeholder.com/250x125" />
+            </li>
+            <li>
+              <img src="http://via.placeholder.com/275x70" />
+            </li>
+            <li>
+              <img src="http://via.placeholder.com/250x120" />
+            </li>
+            <li>
+              <img src="http://via.placeholder.com/220x100" />
+            </li>
+          </ul>
+        <!-- </section> -->
       </section>
 
 
