--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </section>
 
 
-      <section>
+      <section class="quote">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -41,7 +41,7 @@
       </section>
 
 
-      <section>
+      <section class="why">
         <h2>Why?</h2>
         <ul>
           <li>
@@ -69,7 +69,7 @@
       </section>
 
 
-      <section>
+      <section class="quote">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -79,7 +79,7 @@
       </section>
 
 
-      <section>
+      <section class="team">
         <h2>Meet the team</h2>
         <ul>
           <li>
@@ -111,7 +111,7 @@
       </section>
 
 
-      <section>
+      <section class="sponsors">
         <h2>Sponsors</h2>
         <ul>
           <li>
@@ -134,7 +134,7 @@
 
 
       <section>
-        <div>
+        <div class="support">
           <h3>Support</h3>
           <ul>
             <li>
@@ -151,7 +151,7 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="about">
           <h3>About</h3>
           <ul>
             <li>
