--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       </nav>
 
 
-      <section>
-        <h1>Startrly</h1>
-        <sub>A catchy tagline for a great solution</sub>
-        <a href="#">Some Call to Action</a>
+      <section class="brand">
+        <h1 id="companyname">Startrly</h1>
+        <sub id="tagline">A catchy tagline for a great solution</sub>
+        <a class="button" href="#">Some Call to Action</a>
       </section>
 
 
@@ -80,7 +80,7 @@
       </section>
 
 
-      <section>
+      <section class="team">
         <h2>Meet the team</h2>
         <ul>
           <li>
