--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
       </section>
 
 
-      <section class="team">
-        <h2>Meet the team</h2>
-        <ul>
+      <section>
+        <h2 id="teamtitle">Meet the team</h2>
+        <ul id="team">
           <li>
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
             <span>Kari Kiwi</span>
