formatted Team members

--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 
       <section class="team-members">
         <h2>Meet the team</h2>
-<!-- 
-        <section class="flexbox"> -->
-          <ul>
+
+        <!-- <section class="flexbox"> -->
+          <ul class="flexbox">
             <li>
               <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
               <span>Kari Kiwi</span>
@@ -149,7 +149,7 @@
 
 
 
-      <section>
+      <footer>
         <div>
           <h3>Support</h3>
           <ul>
@@ -181,7 +181,7 @@
             </li>
           </ul>
         </div>
-      </section>
+      </footer>
 
     </main>
   </body>
