--- a/index.html
+++ b/index.html
@@ -7,32 +7,36 @@
     <link rel="stylesheet" type="text/css" media="screen" href="style.css">
   </head>
   <body>
-    <div>
+    <!-- <div class="grid-container"> -->
 
+        <nav>
+          <ul class="flex-box-nav">
+            <li>
+              Startrly
+            </li>
+            <li>
+              Try Now!
+            </li>
+            <li>
+              About
+            </li>
+          </ul>
+        </nav>
 
-      <nav>
-        <ul>
-          <li>
-            Startrly
-          </li>
-          <li>
-            Try Now!
-          </li>
-          <li>
-            About
-          </li>
-        </ul>
-      </nav>
+        <section class="flex-box-startrly">
+          <div>
+            <h1>Startrly</h1>
+          </div>
+          <div>
+            <sub>A catchy tagline for a great solution</sub>
+          </div>
+          <div>
+            <a href="#">Some Call to Action</a>
+          </div>
+        </section>
 
-
-      <section>
-        <h1>Startrly</h1>
-        <sub>A catchy tagline for a great solution</sub>
-        <a href="#">Some Call to Action</a>
-      </section>
-
-
-      <section>
+      <!-- <div class="quote"> -->
+      <section class="quote">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -40,37 +44,51 @@
           Mx. Lorem
         </p>
       </section>
+      <!-- </div> -->
 
-
-      <section>
+      <section class="flex-boxes">
         <h2>Why?</h2>
         <ul>
-          <li>
-            <img src="http://via.placeholder.com/100x100" />
-            <strong>Comfortable</strong>
-            <p>
-              Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
-            </p>
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/100x100" />
-            <strong>Robust</strong>
-            <p>
-              At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
-            </p>
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/100x100" />
-            <strong>Convenient</strong>
-            <p>
-              Itaque earum rerum hic tenetur a sapiente delectus.
-            </p>
+          <li class="why-subs">
+            <div class="img-text">
+              <img src="http://via.placeholder.com/100x100" />
+              <!-- </div> -->
+              <div>
+                <strong>Comfortable</strong>
+                <p>
+                  Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
+                </p>
+              </div>
+            </div>
+          <!-- </li> -->
+          <!-- <li class="why-subs"> -->
+            <div class="img-text">
+              <img src="http://via.placeholder.com/100x100" />
+              <!-- </div> -->
+              <div>
+                <strong>Robust</strong>
+                <p>
+                  At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
+                </p>
+              </div>
+            </div>
+          <!-- </li> -->
+          <!-- <li class="why-subs"> -->
+            <div class="img-text">
+              <img src="http://via.placeholder.com/100x100" />
+              <!-- </div> -->
+              <div>
+                <strong>Convenient</strong>
+                <p>
+                  Itaque earum rerum hic tenetur a sapiente delectus.
+                </p>
+              </div>
+            </div>
           </li>
         </ul>
       </section>
 
-
-      <section>
+      <section class="quote">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -79,62 +97,63 @@
         </p>
       </section>
 
+      <div class="meet-the-team">
+        <section>
+          <h2>Meet the team</h2>
+          <ul class = "flex-boxes">
+            <li>
+              <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
+              <span>Kari Kiwi</span>
+              <span>CFO</span>
+            </li>
+            <li>
+              <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
+              <span>Dan Dragon</span>
+              <span>CMO</span>
+            </li>
+            <li>
+              <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
+              <span>Chris Caribou</span>
+              <span>CIO</span>
+            </li>
+            <li>
+              <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
+              <span>Charles Cheetah</span>
+              <span>Board Member, CTO</span>
+            </li>
+            <li>
+              <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
+              <span>Dee Dugong</span>
+              <span>Startup Enthusiast</span>
+            </li>
+          </ul>
+        </section>
+      </div>
 
-      <section>
-        <h2>Meet the team</h2>
-        <ul>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-            <span>Kari Kiwi</span>
-            <span>CFO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
-            <span>Dan Dragon</span>
-            <span>CMO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-            <span>Chris Caribou</span>
-            <span>CIO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-            <span>Charles Cheetah</span>
-            <span>Board Member, CTO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
-            <span>Dee Dugong</span>
-            <span>Startup Enthusiast</span>
-          </li>
-        </ul>
-      </section>
+      <div class="sponsors">
+        <section class="flex-boxes">
+          <h2>Sponsors</h2>
+          <ul class="flex-boxes">
+            <li>
+              <img src="http://via.placeholder.com/300x100" />
+            </li>
+            <li>
+              <img src="http://via.placeholder.com/250x125" />
+            </li>
+            <li>
+              <img src="http://via.placeholder.com/275x70" />
+            </li>
+            <li>
+              <img src="http://via.placeholder.com/250x120" />
+            </li>
+            <li>
+              <img src="http://via.placeholder.com/220x100" />
+            </li>
+          </ul>
+        </section>
+      </div>
 
-
-      <section>
-        <h2>Sponsors</h2>
-        <ul>
-          <li>
-            <img src="http://via.placeholder.com/300x100" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/250x125" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/275x70" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/250x120" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/220x100" />
-          </li>
-        </ul>
-      </section>
-
-
-      <section>
+      <section class="footer">
         <div>
           <h3>Support</h3>
           <ul>
@@ -167,7 +186,6 @@
           </ul>
         </div>
       </section>
-
-    </div>
+    <!-- </div> -->
   </body>
 </html>
