--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link href="styles/normalize.css" rel="stylesheet">
     <link href="styles/styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
     <title>Startrly</title>
   </head>
   <body>
@@ -36,7 +37,7 @@
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
-        <p>
+        <p class="quote-author">
           Mx. Lorem
         </p>
       </section>
@@ -45,21 +46,21 @@
       <section class="why">
         <h2>Why?</h2>
         <ul>
-          <li>
+          <li class="why-first">
             <img src="http://via.placeholder.com/100x100" />
             <strong>Comfortable</strong>
             <p>
               Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
             </p>
           </li>
-          <li>
+          <li class="why-second">
             <img src="http://via.placeholder.com/100x100" />
             <strong>Robust</strong>
             <p>
-              At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
+              "At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam."
             </p>
           </li>
-          <li>
+          <li class="why-third">
             <img src="http://via.placeholder.com/100x100" />
             <strong>Convenient</strong>
             <p>
@@ -72,9 +73,9 @@
 
       <section class="second-quote">
         <blockquote>
-          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+          "Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt."
         </blockquote>
-        <p>
+        <p class="quote-author">
           Mx. Ipsum
         </p>
       </section>
@@ -85,27 +86,27 @@
         <ul>
           <li>
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-            <span>Kari Kiwi</span>
+            <span class="team-name">Kari Kiwi</span>
             <span>CFO</span>
           </li>
           <li>
             <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
-            <span>Dan Dragon</span>
+            <span class="team-name">Dan Dragon</span>
             <span>CMO</span>
           </li>
           <li>
             <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-            <span>Chris Caribou</span>
+            <span class="team-name">Chris Caribou</span>
             <span>CIO</span>
           </li>
           <li>
             <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-            <span>Charles Cheetah</span>
+            <span class="team-name">Charles Cheetah</span>
             <span>Board Member, CTO</span>
           </li>
           <li>
             <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
-            <span>Dee Dugong</span>
+            <span class="team-name">Dee Dugong</span>
             <span>Startup Enthusiast</span>
           </li>
         </ul>
