Change header to grid and import font

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <nav>
         <ul>
-          <li class="left">
+          <li class="nav-left">
             Startrly
           </li>
           <li class="nav-right">
