--- a/index.html
+++ b/index.html
@@ -1,173 +1,189 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Startrly</title>
-    <link href="normalize.css" rel="stylesheet">
-    <link href="index.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="container">
+
+<head>
+  <meta charset="utf-8">
+  <title>Startrly</title>
+  <link href="normalize.css" rel="stylesheet">
+  <link href="index.css" rel="stylesheet">
+</head>
+
+<body>
+  <div class="container">
 
 
-      <nav>
-        <ul>
-          <li>
-            Startrly
-          </li>
-          <li>
-            Try Now!
-          </li>
-          <li>
-            About
-          </li>
-        </ul>
-      </nav>
+    <nav>
+      <ul class="menu-options">
+        <li id="startrly">
+          Startrly
+        </li>
+        <li id="try">
+          Try Now!
+        </li>
+        <li>
+          About
+        </li>
+      </ul>
+    </nav>
 
 
-      <section>
-        <h1>Startrly</h1>
-        <sub>A catchy tagline for a great solution</sub>
-        <a href="#">Some Call to Action</a>
-      </section>
+    <section class="intro">
+      <h1 class="intro-heading">Startrly</h1>
+      <sub class="intro-tagline">A catchy tagline for a great solution</sub>
+      <a class="intro-action" href="#">Some Call to Action</a>
+    </section>
+
+    <div id="line" />
 
 
-      <section>
-        <blockquote>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </blockquote>
-        <p>
-          Mx. Lorem
-        </p>
-      </section>
+    <section class="quote">
+      <blockquote>
+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua.""
+      </blockquote>
+      <p class="author">
+        --Mx. Lorem
+      </p>
+    </section>
 
+    <div id="line" />
 
-      <section>
-        <h2>Why?</h2>
-        <ul>
-          <li>
-            <img src="http://via.placeholder.com/100x100" />
+    <section id="why-section">
+      <h2>Why?</h2>
+      <ul class="why">
+        <li class="why-content">
+          <img src="http://via.placeholder.com/100x100" />
+          <div>
             <strong>Comfortable</strong>
             <p>
-              Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
+              Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus
+              maiores.
             </p>
+          </div>
+        </li>
+        <li class="why-content">
+          <img src="http://via.placeholder.com/100x100" />
+          <strong>Robust</strong>
+          <p>
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in
+            ea voluptate velit esse quam.
+          </p>
+        </li>
+        <li class="why-content">
+          <img src="http://via.placeholder.com/100x100" />
+          <strong>Convenient</strong>
+          <p>
+            Itaque earum rerum hic tenetur a sapiente delectus.
+          </p>
+        </li>
+      </ul>
+    </section>
+
+    <div id="line" />
+
+    <section class="quote">
+      <blockquote>
+        "Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores
+        eos qui ratione voluptatem sequi nesciunt."
+      </blockquote>
+      <p class="author">
+        --Mx. Ipsum</p>
+      </p><br /><br />
+    </section>
+
+    <div id="line" />
+
+    <section id="team-section">
+      <h2 id="team-heading">Meet the team</h2>
+      <ul class="team">
+        <li id="team1">
+          <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
+          <span>Kari Kiwi</span>
+          <span>CFO</span>
+        </li>
+        <li id="team2">
+          <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
+          <span>Dan Dragon</span>
+          <span>CMO</span>
+        </li>
+        <li id="team3">
+          <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
+          <span>Chris Caribou</span>
+          <span>CIO</span>
+        </li>
+        <li id="team4">
+          <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
+          <span>Charles Cheetah</span>
+          <span>Board Member, CTO</span>
+        </li>
+        <li id="team5">
+          <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
+          <span>Dee Dugong</span>
+          <span>Startup Enthusiast</span>
+        </li>
+      </ul>
+    </section>
+
+
+    <section id="sponsor-section">
+      <h2>Sponsors</h2>
+      <ul class="sponsors">
+        <li>
+          <img src="http://via.placeholder.com/300x100" />
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/250x125" />
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/275x70" />
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/250x120" />
+        </li>
+        <br/>
+        <li>
+          <img src="http://via.placeholder.com/220x100" />
+        </li>
+      </ul>
+    </section>
+
+    <div id="line" />
+
+    <section class="footer">
+      <div>
+        <h3>Support</h3>
+        <ul id="support">
+          <li>
+            Demo
           </li>
           <li>
-            <img src="http://via.placeholder.com/100x100" />
-            <strong>Robust</strong>
-            <p>
-              At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
-            </p>
+            Support
           </li>
           <li>
-            <img src="http://via.placeholder.com/100x100" />
-            <strong>Convenient</strong>
-            <p>
-              Itaque earum rerum hic tenetur a sapiente delectus.
-            </p>
+            Contact
+          </li>
+          <li>
+            Docs
           </li>
         </ul>
-      </section>
-
-
-      <section>
-        <blockquote>
-          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-        </blockquote>
-        <p>
-          Mx. Ipsum
-        </p>
-      </section>
-
-
-      <section>
-        <h2>Meet the team</h2>
-        <ul>
+      </div>
+      <div>
+        <h3>About</h3>
+        <ul id="about">
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-            <span>Kari Kiwi</span>
-            <span>CFO</span>
+            Our Mission
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
-            <span>Dan Dragon</span>
-            <span>CMO</span>
+            Careers
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-            <span>Chris Caribou</span>
-            <span>CIO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-            <span>Charles Cheetah</span>
-            <span>Board Member, CTO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
-            <span>Dee Dugong</span>
-            <span>Startup Enthusiast</span>
+            Get in Touch
           </li>
         </ul>
-      </section>
+      </div>
+    </section>
 
+  </div>
+</body>
 
-      <section>
-        <h2>Sponsors</h2>
-        <ul>
-          <li>
-            <img src="http://via.placeholder.com/300x100" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/250x125" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/275x70" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/250x120" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/220x100" />
-          </li>
-        </ul>
-      </section>
-
-
-      <section>
-        <div>
-          <h3>Support</h3>
-          <ul>
-            <li>
-              Demo
-            </li>
-            <li>
-              Support
-            </li>
-            <li>
-              Contact
-            </li>
-            <li>
-              Docs
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h3>About</h3>
-          <ul>
-            <li>
-              Our Mission
-            </li>
-            <li>
-              Careers
-            </li>
-            <li>
-              Get in Touch
-            </li>
-          </ul>
-        </div>
-      </section>
-
-    </div>
-  </body>
 </html>
