--- a/index.html
+++ b/index.html
@@ -132,19 +132,19 @@
       <h2>Sponsors</h2>
       <ul>
         <li>
-          <img src="http://via.placeholder.com/300x100" />
+          <img src="http://via.placeholder.com/300x100" alt="placeholder image" />
         </li>
         <li>
-          <img src="http://via.placeholder.com/250x125" />
+          <img src="http://via.placeholder.com/250x125" alt="placeholder image" />
         </li>
         <li>
-          <img src="http://via.placeholder.com/275x70" />
+          <img src="http://via.placeholder.com/275x70" alt="placeholder image" />
         </li>
         <li>
-          <img src="http://via.placeholder.com/250x120" />
+          <img src="http://via.placeholder.com/250x120" alt="placeholder image" />
         </li>
         <li>
-          <img src="http://via.placeholder.com/220x100" />
+          <img src="http://via.placeholder.com/220x100" alt="placeholder image" />
         </li>
       </ul>
     </section>
