Add additional alt attributes

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <h2>Why?</h2>
       <ul>
         <li>
-          <img src="http://via.placeholder.com/100x100" />
+          <img src="http://via.placeholder.com/100x100" alt="placeholder image" />
           <strong>Comfortable</strong>
           <p>
             Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus
@@ -57,7 +57,7 @@
           </p>
         </li>
         <li>
-          <img src="http://via.placeholder.com/100x100" />
+          <img src="http://via.placeholder.com/100x100" alt="placeholder image" />
           <strong>Robust</strong>
           <p>
             At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in
@@ -65,7 +65,7 @@
           </p>
         </li>
         <li>
-          <img src="http://via.placeholder.com/100x100" />
+          <img src="http://via.placeholder.com/100x100" alt="placeholder image" />
           <strong>Convenient</strong>
           <p>
             Itaque earum rerum hic tenetur a sapiente delectus.
