--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
-    <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
   </head>
   <body>
@@ -26,7 +26,7 @@
       <section class="welcome">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
-        <a href="#">Some Call to Action</a>
+        <div><a class="button" href="#">Some Call to Action</a></div>
       </section>
 
 
@@ -35,7 +35,7 @@
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
         <p>
-          Mx. Lorem
+          -- Mx. Lorem
         </p>
       </section>
 
@@ -73,7 +73,7 @@
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
         <p>
-          Mx. Ipsum
+          -- Mx. Ipsum
         </p>
       </section>
 
@@ -81,31 +81,35 @@
       <section class="meet-team">
         <h2>Meet the team</h2>
         <ul>
-          <li class="a">
-            <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-            <span>Kari Kiwi</span>
-            <span>CFO</span>
-          </li>
-          <li class="b">
-            <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
-            <span>Dan Dragon</span>
-            <span>CMO</span>
-          </li>
-          <li class="c">
-            <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-            <span>Chris Caribou</span>
-            <span>CIO</span>
-          </li>
-          <li class="d">
-            <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-            <span>Charles Cheetah</span>
-            <span>Board Member, CTO</span>
-          </li>
-          <li class="e">
-            <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
-            <span>Dee Dugong</span>
-            <span>Startup Enthusiast</span>
-          </li>
+          <div class= "first-three">
+            <li class="a">
+              <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
+              <span>Kari Kiwi</span>
+              <span>CFO</span>
+            </li>
+            <li class="b">
+              <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
+              <span>Dan Dragon</span>
+              <span>CMO</span>
+            </li>
+            <li class="c">
+              <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
+              <span>Chris Caribou</span>
+              <span>CIO</span>
+            </li>
+          </div>
+          <div class="last-two">
+            <li class="d">
+              <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
+              <span>Charles Cheetah</span>
+              <span>Board Member, CTO</span>
+            </li>
+            <li class="e">
+              <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
+              <span>Dee Dugong</span>
+              <span>Startup Enthusiast</span>
+            </li>
+          </div>
         </ul>
       </section>
 
@@ -131,7 +135,7 @@
         </ul>
       </section>
 
-      <section class="support">
+      <section class="footer">
         <div>
           <h3>Support</h3>
           <ul>
@@ -149,7 +153,7 @@
             </li>
           </ul>
         </div>
-        <section class="about">
+        <section class>
           <h3>About</h3>
           <ul>
             <li>
