finished why and footer sections

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </nav>
 
 
-      <section id="hero">
+      <section id="intro">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
@@ -133,8 +133,8 @@
       </section>
 
 
-      <section>
-        <div class="support">
+      <section class="footer">
+        <div>
           <h3>Support</h3>
           <ul>
             <li>
@@ -151,7 +151,7 @@
             </li>
           </ul>
         </div>
-        <div class="about">
+        <div>
           <h3>About</h3>
           <ul>
             <li>
