--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 
       <section class="support">
-        <div>
+        <div class="support-demo">
           <h3>Support</h3>
           <ul>
             <li>
@@ -153,7 +153,7 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="about">
           <h3>About</h3>
           <ul>
             <li>
