--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
       <section class="testimonial">
         <blockquote>
-          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+          "Startrly Studio helps us to collaborate with our worldwide technical experts so that we can bring their skills and experience to bear on more projects; to deliver a better outcome for our clients."
         </blockquote>
         <p>
-          -Mx. Lorem
+          --Ming Lin
         </p>
       </section>
 
@@ -80,10 +80,10 @@
 
       <section class="testimonial">
         <blockquote>
-          "Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt."
+          "It saves a lot of time and makes it very easy to mark a questionable spot in the plan with an arrow and to add a supporting photo. This provides the site manager with clear and understandable information. Trying to explain the same thing on the phone takes more time and is less accurate."
         </blockquote>
         <p>
-          -Mx. Ipsum
+          --Angela Banangela
         </p>
       </section>
 
@@ -140,7 +140,7 @@
           </li>
         </ul>
       </section>
-
+    </div>
 
       <footer>
         <div>
@@ -176,6 +176,5 @@
         </div>
       </footer>
 
-    </div>
   </body>
 </html>
