--- a/index.html
+++ b/index.html
@@ -83,32 +83,36 @@
           <section class="team">
             <h2>Meet the team</h2>
             <ul>
-              <li>
-                <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-                <span>Kari Kiwi</span>
-                <span>CFO</span>
-              </li>
-              <li>
-                <img src="https://placebear.com/150/150"  alt="profile for dan dragon" />
-                <span>Dan Dragon</span>
-                <span>CMO</span>
-              </li>
-              <li>
-                <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-                <span>Chris Caribou</span>
-                <span>CIO</span>
-              </li>
-              <li>
-                <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-                <span>Charles Cheetah</span>
-                <span>Board Member, CTO</span>
-              </li>
-              <li>
-                <img src="https://placebear.com/150/150"  alt="profile for dee dugong" />
-                <span>Dee Dugong</span>
-                <span>Startup Enthusiast</span>
-              </li>
-            </ul>
+              <div class="top-three">
+                <li>
+                  <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
+                  <span>Kari Kiwi</span>
+                  <span>CFO</span>
+                </li>
+                <li>
+                  <img src="https://placebear.com/150/150"  alt="profile for dan dragon" />
+                  <span>Dan Dragon</span>
+                  <span>CMO</span>
+                </li>
+                <li>
+                  <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
+                  <span>Chris Caribou</span>
+                  <span>CIO</span>
+                </li>
+              </div>
+              <div class="bottom-two">
+                <li>
+                  <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
+                  <span>Charles Cheetah</span>
+                  <span>Board Member, CTO</span>
+                </li>
+                <li>
+                  <img src="https://placebear.com/150/150"  alt="profile for dee dugong" />
+                  <span>Dee Dugong</span>
+                  <span>Startup Enthusiast</span>
+                </li>
+              </ul>
+            </div>
           </section>
         </div>
         <div class="all-sponsors-section">
