--- a/index.html
+++ b/index.html
@@ -3,169 +3,168 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/normalize.css">
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Outline" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/main.css">
   </head>
   <body>
-    <div>
+
+    <nav class="navigation">
+      <ul class="nav-list">
+        <li id="nav-title">
+          Startrly
+        </li>
+        <li>
+          Try Now!
+        </li>
+        <li>
+          About
+        </li>
+      </ul>
+    </nav>
 
 
-      <nav>
+    <section id="page-intro">
+      <h1>Startrly</h1>
+      <sub>A catchy tagline for a great solution</sub>
+      <a href="#" class="button">Some Call to Action</a>
+    </section>
+
+
+    <section class="quote">
+      <blockquote>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+      </blockquote>
+      <p>
+        Mx. Lorem
+      </p>
+    </section>
+
+
+    <section id="why">
+      <h2>Why?</h2>
+      <ul>
+        <li>
+          <img src="http://via.placeholder.com/100x100" />
+          <strong>Comfortable</strong>
+          <p>
+            Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
+          </p>
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/100x100" />
+          <strong>Robust</strong>
+          <p>
+            At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
+          </p>
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/100x100" />
+          <strong>Convenient</strong>
+          <p>
+            Itaque earum rerum hic tenetur a sapiente delectus.
+          </p>
+        </li>
+      </ul>
+    </section>
+
+
+    <section class="quote">
+      <blockquote>
+        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+      </blockquote>
+      <p>
+        Mx. Ipsum
+      </p>
+    </section>
+
+
+    <section id="intros">
+      <h2>Meet the team</h2>
+      <ul>
+        <li>
+          <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
+          <span class="name">Kari Kiwi</span>
+          <span class="title">CFO</span>
+        </li>
+        <li>
+          <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
+          <span class="name">Dan Dragon</span>
+          <span class="title">CMO</span>
+        </li>
+        <li>
+          <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
+          <span class="name">Chris Caribou</span>
+          <span class="title">CIO</span>
+        </li>
+        <li>
+          <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
+          <span class="name">Charles Cheetah</span>
+          <span class="title">Board Member, CTO</span>
+        </li>
+        <li>
+          <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
+          <span class="name">Dee Dugong</span>
+          <span class="title">Startup Enthusiast</span>
+        </li>
+      </ul>
+    </section>
+
+
+    <section id="sponsors">
+      <h2>Sponsors</h2>
+      <ul>
+        <li>
+          <img src="http://via.placeholder.com/300x100" />
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/250x125" />
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/275x70" />
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/250x120" />
+        </li>
+        <li>
+          <img src="http://via.placeholder.com/220x100" />
+        </li>
+      </ul>
+    </section>
+
+    
+    <footer>
+      <div>
+        <h3>Support</h3>
         <ul>
           <li>
-            Startrly
+            Demo
           </li>
           <li>
-            Try Now!
+            Support
           </li>
           <li>
-            About
+            Contact
+          </li>
+          <li>
+            Docs
           </li>
         </ul>
-      </nav>
-
-
-      <section>
-        <h1>Startrly</h1>
-        <sub>A catchy tagline for a great solution</sub>
-        <a href="#">Some Call to Action</a>
-      </section>
-
-
-      <section>
-        <blockquote>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        </blockquote>
-        <p>
-          Mx. Lorem
-        </p>
-      </section>
-
-
-      <section>
-        <h2>Why?</h2>
+      </div>
+      <div>
+        <h3>About</h3>
         <ul>
           <li>
-            <img src="http://via.placeholder.com/100x100" />
-            <strong>Comfortable</strong>
-            <p>
-              Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
-            </p>
+            Our Mission
           </li>
           <li>
-            <img src="http://via.placeholder.com/100x100" />
-            <strong>Robust</strong>
-            <p>
-              At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
-            </p>
+            Careers
           </li>
           <li>
-            <img src="http://via.placeholder.com/100x100" />
-            <strong>Convenient</strong>
-            <p>
-              Itaque earum rerum hic tenetur a sapiente delectus.
-            </p>
+            Get in Touch
           </li>
         </ul>
-      </section>
-
-
-      <section>
-        <blockquote>
-          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-        </blockquote>
-        <p>
-          Mx. Ipsum
-        </p>
-      </section>
-
-
-      <section>
-        <h2>Meet the team</h2>
-        <ul>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-            <span>Kari Kiwi</span>
-            <span>CFO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
-            <span>Dan Dragon</span>
-            <span>CMO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-            <span>Chris Caribou</span>
-            <span>CIO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-            <span>Charles Cheetah</span>
-            <span>Board Member, CTO</span>
-          </li>
-          <li>
-            <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
-            <span>Dee Dugong</span>
-            <span>Startup Enthusiast</span>
-          </li>
-        </ul>
-      </section>
-
-
-      <section>
-        <h2>Sponsors</h2>
-        <ul>
-          <li>
-            <img src="http://via.placeholder.com/300x100" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/250x125" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/275x70" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/250x120" />
-          </li>
-          <li>
-            <img src="http://via.placeholder.com/220x100" />
-          </li>
-        </ul>
-      </section>
-
-
-      <section>
-        <div>
-          <h3>Support</h3>
-          <ul>
-            <li>
-              Demo
-            </li>
-            <li>
-              Support
-            </li>
-            <li>
-              Contact
-            </li>
-            <li>
-              Docs
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h3>About</h3>
-          <ul>
-            <li>
-              Our Mission
-            </li>
-            <li>
-              Careers
-            </li>
-            <li>
-              Get in Touch
-            </li>
-          </ul>
-        </div>
-      </section>
-
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
