css style sheets & index.html with added classes, forgot to commit earlier

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/normalize.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css">
   </head>
   <body>
-    <div>
+    <div class="container">
 
 
       <nav>
-        <ul>
+        <ul class="header">
           <li>
             Startrly
           </li>
@@ -23,26 +25,26 @@
       </nav>
 
 
-      <section>
+      <section class="corporate">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
         <a href="#">Some Call to Action</a>
       </section>
 
 
-      <section>
+      <section class="quote_1">
         <blockquote>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
         </blockquote>
         <p>
-          Mx. Lorem
+          -- Mx. Lorem
         </p>
       </section>
 
 
       <section>
         <h2>Why?</h2>
-        <ul>
+        <ul class="what-we-do">
           <li>
             <img src="http://via.placeholder.com/100x100" />
             <strong>Comfortable</strong>
@@ -68,19 +70,19 @@
       </section>
 
 
-      <section>
+      <section class="quote_2">
         <blockquote>
-          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+          "Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt."
         </blockquote>
         <p>
-          Mx. Ipsum
+          --Mx. Ipsum
         </p>
       </section>
 
 
       <section>
         <h2>Meet the team</h2>
-        <ul>
+        <ul class="team">
           <li>
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
             <span>Kari Kiwi</span>
@@ -112,7 +114,7 @@
 
       <section>
         <h2>Sponsors</h2>
-        <ul>
+        <ul class="sponsors">
           <li>
             <img src="http://via.placeholder.com/300x100" />
           </li>
@@ -132,10 +134,10 @@
       </section>
 
 
-      <section>
+      <section class="footer">
         <div>
           <h3>Support</h3>
-          <ul>
+          <ul class="footer-support">
             <li>
               Demo
             </li>
@@ -150,9 +152,9 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="footer-column2">
           <h3>About</h3>
-          <ul>
+          <ul class="footer-about">
             <li>
               Our Mission
             </li>
