positioned the team member info using grid

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
     <title>Startrly</title>
     <LINK REL=StyleSheet HREF="style/normalize.css" TYPE="text/css" MEDIA=screen>
     <LINK REL=StyleSheet HREF="style/style.css" TYPE="text/css" MEDIA=screen>
@@ -86,33 +87,42 @@
       </section>
 
 
-      <section>
+      <section class="content">
         <h2>Meet the team</h2>
-        <ul>
-          <li>
+        <ul class="grid-container">
+          <li class="cfo">
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-            <span>Kari Kiwi</span>
-            <span>CFO</span>
+            <div>
+            <div><span>Kari Kiwi</span></div>
+            <div><span>CFO</span></div>
           </li>
-          <li>
+          <li class="cmo">
             <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
-            <span>Dan Dragon</span>
-            <span>CMO</span>
+            <div>
+            <div><span>Dan Dragon</span></div>
+            <div><span>CMO</span></div>
+            </div>
           </li>
-          <li>
+          <li class="cio">
             <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-            <span>Chris Caribou</span>
-            <span>CIO</span>
+            <div>
+            <div><span>Chris Caribou</span></div>
+            <div><span>CIO</span></div>
+            </div>
           </li>
-          <li>
+          <li class="cto">
             <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-            <span>Charles Cheetah</span>
-            <span>Board Member, CTO</span>
+            <div>
+            <div><span>Charles Cheetah</span></div>
+            <div><span>Board Member, CTO</span></div>
+            </div>
           </li>
-          <li>
+          <li class="enthusiast">
             <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
-            <span>Dee Dugong</span>
-            <span>Startup Enthusiast</span>
+            <div>
+            <div><span>Dee Dugong</span></div>
+            <div><span>Startup Enthusiast</span></div>
+            </div>
           </li>
         </ul>
       </section>
