finished styling and theming requirements and refactored CSS

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <nav>
       <ul class="navigation_bar">
         <li>
-          Startrly
+          Pizza Cage
         </li>
-        <li>
+        <li id="try">
           Try Now!
         </li>
         <li>
@@ -24,25 +24,25 @@
     </nav>
    
     <main>
-      <section class="title_and_tagline">
-        <h1>Startrly</h1>
-        <sub>A catchy tagline for a great solution</sub>
-        <a id="button" href="#">Some Call to Action</a>
+      <section class="borders" id="title_and_tagline">
+        <h1>Pizza Cage</h1>
+        <sub>Feed Nicolas Cage a Slice of Pizza</sub>
+        <a id="button" href="#">Feed Him Now</a>
       </section>
 
-      <section class="lorem_quote">
+      <section class="borders" id="lorem_quote">
         <blockquote>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          OH, NO! NOT THE BEES! NOT THE BEES! AAAAAHHHHH! OH, THEY'RE IN MY EYES! MY EYES! AAAAHHHHH! AAAAAGGHHH!
         </blockquote>
         <p>
-          Mx. Lorem
+          The Wicker Man
         </p>
       </section>
 
 
-      <section class="why_section">
+      <section class="borders" id="why_section">
         <h2>Why?</h2>
-        <ul id="why_list">
+        <ul>
           <li>
             <img src="https://www.placecage.com/100/100" />
               <strong>Comfortable</strong>
@@ -68,12 +68,12 @@
       </section>
 
 
-      <section>
+      <section class="borders">
         <blockquote>
-          Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
+            I am not a demon. I am a lizard, a shark, a heat-seeking panther. I want to be Bob Denver on acid playing the accordion.
         </blockquote>
         <p>
-          Mx. Ipsum
+          Nicolas Cage
         </p>
       </section>
 
@@ -110,23 +110,23 @@
       </section>
 
 
-      <section class="sponsors">
+      <section class="borders" id="sponsors">
         <h2>Sponsors</h2>
         <ul class="sponsor_images">
           <li>
-            <img src="http://via.placeholder.com/300x100" />
+            <img src="https://www.placecage.com/300/100" />
           </li>
           <li>
-            <img src="http://via.placeholder.com/250x125" />
+            <img src="https://www.placecage.com/250/125" />
           </li>
           <li>
-            <img src="http://via.placeholder.com/275x70" />
+            <img src="https://www.placecage.com/275/70" />
           </li>
           <li>
-            <img src="http://via.placeholder.com/250x120" />
+            <img src="https://www.placecage.com/250/120" />
           </li>
           <li>
-            <img src="http://via.placeholder.com/220x100" />
+            <img src="https://www.placecage.com/220/100" />
           </li>
         </ul>
       </section>
