Styled the team and blockquote sections

--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="normalize.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <title>Startrly</title>
   </head>
   <body>
-    <div>
+    <div class="container">
 
-
+      
       <nav>
-        <ul>
+        <ul class="nav-container">
           <li>
             Startrly
           </li>
@@ -21,16 +23,16 @@
           </li>
         </ul>
       </nav>
+      
 
-
-      <section>
+      <section class="tagline-container">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
-        <a href="#">Some Call to Action</a>
+        <a href="#" class= "button">Some Call to Action</a>
       </section>
 
 
-      <section>
+      <section class="quote">
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -42,7 +44,7 @@
 
       <section>
         <h2>Why?</h2>
-        <ul>
+        <ul class="reason-container">
           <li>
             <img src="http://via.placeholder.com/100x100" />
             <strong>Comfortable</strong>
@@ -68,7 +70,7 @@
       </section>
 
 
-      <section>
+      <section class = "quote">
         <blockquote>
           Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
         </blockquote>
@@ -80,7 +82,7 @@
 
       <section>
         <h2>Meet the team</h2>
-        <ul>
+        <ul class = "team-container">
           <li>
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
             <span>Kari Kiwi</span>
@@ -112,7 +114,7 @@
 
       <section>
         <h2>Sponsors</h2>
-        <ul>
+        <ul class = "sponsors-container">
           <li>
             <img src="http://via.placeholder.com/300x100" />
           </li>
