formatted header and footer, added colour

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Startrly</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Oleo+Script|Open+Sans" rel="stylesheet">
   </head>
   <body>
     <main class="main-container">
