--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
       <section>
-        <h2>Why?</h2>
+        <h2 class="title">Why?</h2>
         <ul>
           <li>
             <img src="http://via.placeholder.com/100x100" />
@@ -81,7 +81,7 @@
 
 
       <section>
-        <h2 id="teamtitle">Meet the team</h2>
+        <h2 class="title">Meet the team</h2>
         <ul id="team">
           <li>
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
@@ -112,9 +112,9 @@
       </section>
 
 
-      <section class="team">
-        <h2>Sponsors</h2>
-        <ul>
+      <section>
+        <h2 class="title">Sponsors</h2>
+        <ul class="sponsor">
           <li>
             <img src="http://via.placeholder.com/300x100" />
           </li>
@@ -134,8 +134,8 @@
       </section>
 
 
-      <section>
-        <div>
+      <section class="footernav">
+        <div class="supportnav">
           <h3>Support</h3>
           <ul>
             <li>
@@ -152,7 +152,7 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="aboutnav">
           <h3>About</h3>
           <ul>
             <li>
