positioned the footer items

--- a/index.html
+++ b/index.html
@@ -128,9 +128,10 @@
       </section>
 
 
-      <section>
+      <section class="content">
         <h2>Sponsors</h2>
-        <ul>
+        <ul class="sponsors">
+          <div>
           <li>
             <img src="http://via.placeholder.com/300x100" />
           </li>
@@ -143,14 +144,17 @@
           <li>
             <img src="http://via.placeholder.com/250x120" />
           </li>
+          </div>
+          <div>
           <li>
             <img src="http://via.placeholder.com/220x100" />
           </li>
+          </div>
         </ul>
       </section>
 
 
-      <section>
+      <section class="footer-box">
         <div>
           <h3>Support</h3>
           <ul>
