--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Startrly</title>
+    <link href="normalize.css" rel="stylesheet" />
+  <link href="styles.css" rel="stylesheet" />
+ <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic+Coding" rel="stylesheet">
   </head>
   <body>
     <div>
 
 
-      <nav>
-        <ul>
-          <li>
+      <nav class="nav">
+        <ul class = "nav-box">
+          <li class = "nav-home" >
             Startrly
           </li>
-          <li>
+          <li class = "nav-try">
             Try Now!
           </li>
           <li>
@@ -23,14 +26,15 @@
       </nav>
 
 
-      <section>
+      <section class = "section">
         <h1>Startrly</h1>
         <sub>A catchy tagline for a great solution</sub>
-        <a href="#">Some Call to Action</a>
+        <a href="#" class="header-button">Some Call to Action</a>
       </section>
 
 
-      <section>
+      <section class= "content-quote">
+        <div class="container"></div>
         <blockquote>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
         </blockquote>
@@ -40,7 +44,7 @@
       </section>
 
 
-      <section>
+      <section class = "content-why">
         <h2>Why?</h2>
         <ul>
           <li>
@@ -78,30 +82,30 @@
       </section>
 
 
-      <section>
+      <section class="content-team">
         <h2>Meet the team</h2>
         <ul>
-          <li>
+          <li class="kari">
             <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
             <span>Kari Kiwi</span>
             <span>CFO</span>
           </li>
-          <li>
+          <li class= "dan">
             <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
             <span>Dan Dragon</span>
             <span>CMO</span>
           </li>
-          <li>
+          <li class="chris">
             <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
             <span>Chris Caribou</span>
             <span>CIO</span>
           </li>
-          <li>
+          <li class ="charles">
             <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
             <span>Charles Cheetah</span>
             <span>Board Member, CTO</span>
           </li>
-          <li>
+          <li class="dee">
             <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
             <span>Dee Dugong</span>
             <span>Startup Enthusiast</span>
@@ -110,9 +114,9 @@
       </section>
 
 
-      <section>
+      <section class="content-sponsors">
         <h2>Sponsors</h2>
-        <ul>
+        <ul class = "box">
           <li>
             <img src="http://via.placeholder.com/300x100" />
           </li>
@@ -132,8 +136,8 @@
       </section>
 
 
-      <section>
-        <div>
+      <section class= "footer">
+        <div class="footer-support">
           <h3>Support</h3>
           <ul>
             <li>
@@ -150,7 +154,7 @@
             </li>
           </ul>
         </div>
-        <div>
+        <div class="footer-about">
           <h3>About</h3>
           <ul>
             <li>
