--- a/index.html
+++ b/index.html
@@ -45,23 +45,25 @@
 
 
       <section class="why">
-        <h2>Why?</h2>
-        <ul>
-          <li>
+        <div>
+          <h2 id="top">Why?</h2>
+        </div>
+        <ul class="pic-text">
+          <li class="w1">
             <img src="http://via.placeholder.com/100x100" />
             <strong>Comfortable</strong>
             <p>
               Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
             </p>
           </li>
-          <li>
+          <li class="w2">
             <img src="http://via.placeholder.com/100x100" />
             <strong>Robust</strong>
             <p>
               At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam.
             </p>
           </li>
-          <li>
+          <li class="w3">
             <img src="http://via.placeholder.com/100x100" />
             <strong>Convenient</strong>
             <p>
