added top button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <section class="title">
             <h1>Startrly</h1>
             <p>A catchy tagline for a great   solution</p>
-            <a href="#">Some Call to Action</a>
+            <a href="#" class="button">Some Call to Action</a>
           </section>
         </div>
         <div class="top-quote-block">
