changed everything, looks ok now

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
       <nav class="header">
         <ul>
-          <li>
+          <li class="left">
             Startrly
           </li>
-          <li>
+          <li class="right">
             Try Now!
           </li>
-          <li>
+          <li class="right">
             About
           </li>
         </ul>
@@ -46,21 +46,21 @@
       <section class="why">
         <h2>Why?</h2>
         <ul>
-          <li class="why-first">
+          <li>
             <img src="http://via.placeholder.com/100x100" />
             <strong>Comfortable</strong>
             <p>
               Et quas molestias excepturi sint occaecati cupiditate non providents, ut aut reiciendis voluptatibus maiores.
             </p>
           </li>
-          <li class="why-second">
+          <li>
             <img src="http://via.placeholder.com/100x100" />
             <strong>Robust</strong>
             <p>
               "At vero eos et accusamus et iusto odio dignissimos ducimus qui. Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam."
             </p>
           </li>
-          <li class="why-third">
+          <li>
             <img src="http://via.placeholder.com/100x100" />
             <strong>Convenient</strong>
             <p>
@@ -71,7 +71,7 @@
       </section>
 
 
-      <section class="second-quote">
+      <section class="quote">
         <blockquote>
           "Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt."
         </blockquote>
@@ -85,29 +85,39 @@
         <h2>Meet the team</h2>
         <ul>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
-            <span class="team-name">Kari Kiwi</span>
-            <span>CFO</span>
+            <div class="team-mate">
+              <img src="https://placebear.com/150/150" alt="profile for kari kiwi" />
+              <span>Kari Kiwi</span>
+              <span>CFO</span>
+            </div>
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
-            <span class="team-name">Dan Dragon</span>
-            <span>CMO</span>
+            <div class="team-mate">
+              <img src="https://placebear.com/150/150" alt="profile for dan dragon" />
+              <span>Dan Dragon</span>
+              <span>CMO</span>
+            </div>
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
-            <span class="team-name">Chris Caribou</span>
-            <span>CIO</span>
+            <div class="team-mate">
+              <img src="https://placebear.com/150/150" alt="profile for chris caribou" />
+              <span>Chris Caribou</span>
+              <span>CIO</span>
+            </div>
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
-            <span class="team-name">Charles Cheetah</span>
-            <span>Board Member, CTO</span>
+            <div class="team-mate">
+              <img src="https://placebear.com/150/150" alt="profile for charles cheetah" />
+              <span>Charles Cheetah</span>
+              <span>Board Member, CTO</span>
+            </div>
           </li>
           <li>
-            <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
-            <span class="team-name">Dee Dugong</span>
-            <span>Startup Enthusiast</span>
+            <div class="team-mate">
+              <img src="https://placebear.com/150/150" alt="profile for dee dugong" />
+              <span>Dee Dugong</span>
+              <span>Startup Enthusiast</span>
+            </div>  
           </li>
         </ul>
       </section>
@@ -136,7 +146,7 @@
 
 
       <section class="support">
-        <div class="support-demo">
+        <div>
           <h3>Support</h3>
           <ul>
             <li>
@@ -153,7 +163,7 @@
             </li>
           </ul>
         </div>
-        <div class="about">
+        <div>
           <h3>About</h3>
           <ul>
             <li>
