fancy gradient border

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
           <li>
             Startrly
           </li>
-          <li>
-            Try Now!
-          </li>
-          <li>
-            About
-          </li>
+          <div class="wrapper">
+            <li>
+              Try Now!
+            </li>
+            <li>
+              About
+            </li>
+          </div>
         </ul>
       </nav>
 
@@ -30,7 +32,7 @@
       <section class="welcome">
         <h1>Startrly</h1>
         <h3>A catchy tagline for a great solution</h3>
-        <a class="button" href="#">Some Call to Action</a>
+        <a class="button" href="#">Let's talk</a>
       </section>
 
 
@@ -136,7 +138,7 @@
             <img src="images/logos/sfco.png" />
           </li>
           <li>
-            <img src="images/logos/df292c7dd9b014ae9c8e0e8813f85fbd.jpg" />
+            <img src="images/logos/wildelogo.png" />
           </li>
         </ul>
       </section>
