finished layout, begin stsyling

--- a/html-pages/index.html
+++ b/html-pages/index.html
@@ -5,6 +5,8 @@
     <title>Startrly</title>
     <link rel="stylesheet" type="text/css" media="screen" href="../styles/normalize.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../styles/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Homemade+Apple" rel="stylesheet">
   </head>
   <body>
     <div>
@@ -133,10 +135,10 @@
       </section>
 
 
-      <section>
-        <div>
-          <h3>Support</h3>
-          <ul>
+      <section class= "footer">
+        <div class= "footer_box">
+          <h3 class= "footer_head">Support</h3>
+          <ul class= "footer_list">
             <li>
               Demo
             </li>
@@ -151,9 +153,9 @@
             </li>
           </ul>
         </div>
-        <div>
-          <h3>About</h3>
-          <ul>
+        <div class= "footer_box">
+          <h3 class= "footer_head">About</h3>
+          <ul class= "footer_list">
             <li>
               Our Mission
             </li>
