bottom nav spaces and styled

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 
       <section class="footernav">
-        <div class="supportnav">
+        <div>
           <h3>Support</h3>
           <ul>
             <li>
@@ -152,7 +152,7 @@
             </li>
           </ul>
         </div>
-        <div class="aboutnav">
+        <div>
           <h3>About</h3>
           <ul>
             <li>
